# fpa

./: .gitignore  README.md  changes.md  iceberg_config.yaml  main.py  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/models/: schema.yml
dbt_project/models/marts/: mart_account_summary.sql  mart_transaction_details.sql
dbt_project/models/staging/: stg_financial_transactions.sql
docs/: MIGRATION_GUIDE.md  PHASE_B_COMPLETE.md  PHASE_C_COMPLETE.md
pipelines/: iceberg_manager.py  ingest_excel.py  time_travel.py
pipelines/data/iceberg/warehouse/: financial_transactions_iceberg.parquet  (+5 more)
ui/: .coverage  data_access.py  data_refresh.py  main.py  main_v0_0_2.py  main_v0_0_3.py  main_v0_0_4.py  main_v0_0_4_broken.py  main_v0_0_5.py  main_v0_0_6.py  main_v0_0_7.py  main_v0_0_8.py  main_v2.py
ui/.cache/: cache_index.json
ui/components/: __init__.py  cards.py  chart_components.py  lazy_loader.py  pagination.py  tab_manager.py  table_components.py  ui_components.py
ui/config/: __init__.py  app_config.py  constants.py  data_schemas.py  ui_config.py
ui/services/: __init__.py  data_factory.py  data_service.py  pagination_service.py
ui/tests/: __init__.py  conftest.py  test_data_access.py  test_data_schemas.py  test_data_service.py  test_dbt_utils.py  test_integration.py  test_pagination.py  test_source_filter.py  test_table_components.py
ui/utils/: __init__.py  async_loading.py  caching.py  dbt_utils.py  error_boundaries.py  error_handling.py  filter_utils.py  source_filter.py  state_management.py  stats_utils.py  validation.py  version_utils.py
